# ai-product-list-cart

./: .gitignore  ARQUITECTURA_ESTADO.md  README.md  TESTING_BRIDGE.md
agent-py/: .gitignore  README.md  environment.yml  pyproject.toml  start.sh
agent-py/app/: agent.py.backup  api.py
ui/: README.md  package-lock.json  package.json  powerpages.config.json
ui/src/: App.jsx
ui/src/components/: AgentChatExample.jsx  CardsContainer.jsx  Cart.jsx  CartItem.jsx  CustomChat.jsx  OrderConfirmed.jsx  ProductCard.jsx
ui/src/hooks/: useAgentChatExample.js  useCustomChat.js
ui/src/store/: cart.store.js
